# uptick-zed

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  NOTICES.md  README.md  extension.toml  install.ps1  install.sh
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-04-23-osv-vulnerability-scanner.md
docs/superpowers/specs/: 2026-04-23-osv-vulnerability-scanner-design.md
extension/: Cargo.toml
extension/src/: lib.rs
lsp/: Cargo.toml
lsp/src/: cache.rs  lib.rs  main.rs  manifest.rs  onboarding.rs  position.rs  server.rs  version.rs
lsp/src/lockfiles/: cargo.rs  mod.rs  npm.rs
lsp/src/parsers/: cargo_toml.rs  composer_json.rs  go_mod.rs  json_common.rs  mod.rs  package_json.rs  pom_xml.rs  pubspec_yaml.rs
lsp/src/providers/: cargo.rs  composer.rs  go.rs  maven.rs  mod.rs  npm.rs  pub_dev.rs
lsp/src/vulnerabilities/: cache.rs  mod.rs  osv.rs
lsp/tests/: real_go_mod.rs  real_lockfile.rs  real_pom_xml.rs
lsp/tests/fixtures/: go.mod  pom.xml
src/: lib.rs
