[package]
name = "versionlens-zed"
description = "Zed extension that shows the latest version of each dependency in package.json, Cargo.toml, pubspec.yaml, and composer.json."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.7.0"

[workspace]
resolver = "2"
members = ["lsp"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/stevenbarash/versionlens-zed"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
opt-level = "z"
