[package]
name = "uptick-zed"
description = "Zed extension that shows the latest version of each dependency in package.json, Cargo.toml, pubspec.yaml, composer.json, go.mod, and pom.xml."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.7.0"

[workspace]
resolver = "2"
members = ["lsp"]

[workspace.package]
version = "0.6.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/stevenbarash/uptick-zed"

# Cargo only allows `opt-level`, `codegen-units`, and `strip` to be
# overridden per-package; `lto` must be top-level. Thin LTO is a
# compromise: WASM is marginally larger than full-LTO but the LSP
# release build is much faster to link, and we don't lose meaningful
# runtime perf.
[profile.release]
lto = "thin"
strip = "symbols"

# The extension is a tiny cdylib shipped as .wasm; trade code-gen time
# and runtime speed for minimum binary size.
[profile.release.package.uptick-zed]
codegen-units = 1
opt-level = "z"
