[package]
name = "versionlens-lsp"
description = "Language server that surfaces the latest available version of each dependency in package.json, Cargo.toml, pubspec.yaml, and composer.json."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "versionlens-lsp"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "sync", "time"] }
tokio-util = "0.7"
reqwest = { version = "0.13", default-features = false, features = ["json", "native-tls", "gzip", "http2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml_edit = "0.25"
jsonc-parser = { version = "0.32", features = ["serde"] }
semver = "1"
dashmap = "6"
once_cell = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
futures = "0.3"

[dev-dependencies]
indoc = "2"
